<resources>
    <string name="app_name">DojoManager</string>


    <string name="const_shared_pref_name">MY_PREFS</string>
    <string name="const_shared_pref_isSetup">PREFS_IS_SETUP</string>

    <string name="settings_title">Settings</string>
    <string name="title_activity_student_list">Student Management</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_student_pager">Student Management</string>

    <string name="save">Save</string>
    <string name="save_failed">Save failed.</string>
    <string name="delete">Delete</string>
    <string name="removed">Removed</string>

    <!-- Spinner -->
    <string-array name="rank_levels">
        <item>10</item>
        <item>9</item>
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>
    <string-array name="rank_types">
        <item>Dan</item>
        <item>Kyu</item>
    </string-array>
    <string-array name="spinner_color_labels">
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>White</item>
    </string-array>

    <!-- Drawer Items -->
    <string-array name="main_drawer_items">
        <item>Class Calendar</item>
        <item>Student Management</item>
        <item>Dojo Settings</item>
    </string-array>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!--- Hints -->
    <string name="student_label_names">Name</string>
    <string name="student_first_name">First Name</string>
    <string name="student_last_name">Last Name</string>
    <string name="student_birthday">Birthday</string>
    <string name="student_label_rank">Rank</string>
    <string name="student_rank_level">Rank Level</string>
    <string name="student_rank_type">Rank Type</string>
    <string name="student_rank_timeInRank">Time in rank (hours)</string>
    <string name="student_rank_promote">Promote Student</string>
    <string name="student_label_age">Age</string>
    <string name="student_label_paid">Paid</string>
    <string name="student_label_notes">Notes</string>
    <string name="student_button_viewNotes">View notes</string>
    <string name="student_note_addNote">Add note</string>
    <string name="student_label_contacts">Contacts</string>
    <string name="student_email">Email Address</string>
    <string name="title_activity_date_class_list">DateClassListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="dojoClass_studentCount">Students:</string>
    <string name="class_label">Class Label</string>
    <string name="class_duration_label">Duration</string>
    <string name="class_color_label">Colors</string>
    <string name="class_takeAttendance">Take Attendance</string>
    <string name="class_attendance_present">Present</string>
    <string name="attendance_updated">Attendance Updated.</string>
    <string name="attendance_failed">Attendance FAILED.</string>

</resources>
