<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.android.thompson.scott.dojomanager.StudentFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:background="#ffffff"
                android:elevation="10dp"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/AppTheme.CardTitle"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:padding="-5dp">

                    <TextView
                        android:id="@+id/student_label_names"

                        style="@style/AppTheme.CardTitle"
                        android:layout_width="0dp"
                        android:layout_weight="2.93"
                        android:autoText="false"
                        android:elevation="0dp"
                        android:paddingStart="0dp"
                        android:text="@string/student_label_names"
                        android:textAlignment="textStart" />

                    <CheckBox
                        android:id="@+id/student_isPaid_cb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center"
                        android:text="@string/student_label_paid"
                        android:textSize="18sp" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/colorAccent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/student_firstName_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/student_first_name"
                        android:maxLines="1"
                        android:selectAllOnFocus="true"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/student_lastName_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/student_last_name"
                        android:maxLines="1"
                        android:selectAllOnFocus="true"
                        android:singleLine="true" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/student_label_contact"
                    style="@style/AppTheme.CardTitle"
                    android:layout_width="match_parent"
                    android:text="@string/student_label_contacts" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/student_label_e"
                        android:layout_width="27dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text=" @"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/student_email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Email address"
                        android:inputType="textEmailAddress"
                        tools:hint="@string/student_email" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/student_label_p"
                        android:layout_width="27dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text=" #"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/student_phone_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.74"
                        android:ems="10"
                        android:inputType="text|phone"
                        tools:hint="321-555-1234" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:background="#ffffff"
                android:elevation="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/student_label_rank"
                    style="@style/AppTheme.CardTitle"
                    android:layout_width="match_parent"
                    android:layout_weight="0"
                    android:text="@string/student_label_rank"
                    android:textAlignment="textStart" />

                <LinearLayout
                    android:id="@+id/student_fragment_rankDropdowns"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/student_rank_level_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/student_rank_type_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="0"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/student_fragment_timeInRank_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/student_rank_timeInRank" />

                    <EditText
                        android:id="@+id/student_timeInRank_et"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/student_rank_timeInRank"
                        android:inputType="numberDecimal"
                        android:padding="5dp"
                        android:selectAllOnFocus="true"
                        android:singleLine="true" />

                </LinearLayout>

                <Button
                    android:id="@+id/student_promote_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/student_rank_promote" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:background="#ffffff"
                android:elevation="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/student_label_age"

                    style="@style/AppTheme.CardTitle"
                    android:layout_width="match_parent"
                    android:layout_weight="0"
                    android:text="@string/student_label_age" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/student_changeBday_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="5dp"
                        android:text="Button" />

                    <TextView
                        android:id="@+id/student_age_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/student_label_age"
                        android:textAppearance="@style/TextAppearance.AppCompat" />

                    <TextView
                        android:id="@+id/student_age_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="5dp"
                        android:text="TextView" />

                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight="0"
                android:background="@color/colorPrimary" />

            <Button
                android:id="@+id/student_viewNotes_button"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="#ffffff"
                android:elevation="5dp"
                android:text="@string/student_button_viewNotes" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
